RESOLVED FIXED300983
Fix and re-enable some IPC LayoutTests
https://bugs.webkit.org/show_bug.cgi?id=300983
Summary Fix and re-enable some IPC LayoutTests
Jon Butler
Reported 2025-10-17 07:39:03 PDT
Updated some IPC LayoutTests to fix errors and crashes that were preventing them from running. Aside from updating the test contents, this required 2 IPC-related changes: 1. Update the IPC Testing API wrapper around stream connections to invalidate the connection if needed on finalize, avoiding a debug assertion in the StreamClientConnection destructor 2. Putting a PassKit type behind a the preprocessor conditional along with the other code, so the test that checks the generated serialized type information passes
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-17 07:52:37 PDT
Jon Butler
Comment 2 2025-10-17 07:57:54 PDT
Jon Butler
Comment 3 2025-10-17 08:04:48 PDT
EWS
Comment 4 2025-10-31 06:28:27 PDT
Committed 302384@main (7d7750b55a1b): <https://commits.webkit.org/302384@main> Reviewed commits have been landed. Closing PR #52561 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.