Fix and re-enable some IPC LayoutTests https://bugs.webkit.org/show_bug.cgi?id=300983 rdar://162864398

Reviewed by NOBODY (OOPS!).

Updated some IPC LayoutTests to fix errors and crashes that were preventing them from running. Aside from updating the test contents, this required 2 IPC-related changes:
1. Update the IPC Testing API wrapper around stream connections to invalidate the connection if needed on finalize, avoiding a debug assertion in the StreamClientConnection destructor
2. Putting a PassKit type behind a the preprocessor conditional along with the other code, so the test that checks the generated serialized type information passes

* LayoutTests/TestExpectations:
* LayoutTests/ipc/invalid-feConvolveMatrix-crash.html:
* LayoutTests/ipc/media-player-invalid-test.html:
* LayoutTests/ipc/restore-empty-stack-crash.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/Shared/Cocoa/CoreIPCPassKit.serialization.in:
* Source/WebKit/WebProcess/WebPage/IPCTestingAPI.cpp:
(WebKit::IPCTestingAPI::JSIPCStreamClientConnection::finalize):