Source/WebKit/Shared/IPCTester.h
@@ -49,6 +49,7 @@ namespace WebKit {
 
 class IPCConnectionTester;
 class IPCStreamTester;
+struct TestParameter;
 
 // Main test interface for initiating various IPC test activities.
 class IPCTester final : public IPC::MessageReceiver, public RefCounted<IPCTester> {
@@ -82,6 +83,7 @@ private:
     void asyncOptionalExceptionData(IPC::Connection&, bool sendEngaged, CompletionHandler<void(std::optional<WebCore::ExceptionData>, String)>&&);
     void emptyMessage() { }
     void emptyMessageWithReply(CompletionHandler<void(uint64_t)>&&);
+    void checkTestParameter(IPC::Connection&, TestParameter param);
     void stopIfNeeded();
 
     RefPtr<WorkQueue> m_testQueue;
