Source/WebKit/Scripts/webkit/model.py
@@ -102,6 +102,7 @@ ipc_receiver = MessageReceiver(name="IPC", superclass=None, attributes=[BUILTIN_
     Message('LegacySessionState', [], [], attributes=[BUILTIN_ATTRIBUTE], condition=None),
     Message('SetStreamDestinationID', [], [], attributes=[BUILTIN_ATTRIBUTE], condition=None),
     Message('ProcessOutOfStreamMessage', [], [], attributes=[BUILTIN_ATTRIBUTE], condition=None),
+    Message('TakeConnectionErrorString', [], [Parameter('reply', 'String', 'errorString')], attributes=[BUILTIN_ATTRIBUTE, SYNCHRONOUS_ATTRIBUTE], condition="ENABLE(IPC_TESTING_API)"),
 ], condition=None, namespace="WebKit", wants_send_cancel_reply=False)
 
 
